fix up spacing

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -7,7 +7,7 @@
   color: #666;
 }
 hr {
-  margin-top: 20px;
+  margin-top: 30px;
   margin-bottom: 20px;
   border: 0;
   border-top: 1px solid #F7F1F1;
@@ -83,8 +83,8 @@ footer {
 
 /* Left column */
 div.col-sm-3 {
-  margin-top: 100px;
-  font-size: 11px;
+  margin-top: 30px;
+  font-size: 12px;
   color: #666;
 }
 div.col-sm-3 strong {
